Updated user controller and added methods to swagger.
